<?xml version="1.0" encoding="utf-8"?>

 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/main_layout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:gravity="center_horizontal|center_vertical"
     android:orientation="vertical" >

     <Chronometer
         android:id="@+id/chrono_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical|center_horizontal"
         android:textSize="130dp" />

     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >

         <Button
             android:id="@+id/buttonStart10"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:text="@string/start10" />

         <Button
             android:id="@+id/buttonStart15"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:text="@string/start15" />

         <Button
             android:id="@+id/buttonPause"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:text="@string/pause"
             android:visibility="gone" />
         <Button
             android:id="@+id/buttonPlay"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:text="@string/play"
             android:visibility="gone" />

         <Button
             android:id="@+id/buttonReset"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:text="@string/reset"
             android:visibility="gone" />
     </LinearLayout>
 </LinearLayout>

